--- a/content/programming.html
+++ b/content/programming.html
@@ -1,16 +1,16 @@
 ---
 class: "landing-page"
 background: "/img/bg6.jpg"
-tint: "orange"
-title: "Food Security."
+tint: "yellow"
+title: "Programming."
 description:  |
-              <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i class="fa fa-facebook-square"></i></a><a href="#pablo" class="btn btn-primary btn-icon btn-round"> <i class="fa fa-twitter"></i></a><a href="#pablo" class="btn btn-primary btn-icon btn-round"> <i class="fa fa-google-plus"></i></a>
+              <a href="https://facebook.com/nederland-sustainability-discussion" class="btn btn-primary btn-icon btn-round"><i class="fa fa-facebook-square"></i></a>
 ---
 
 
 
-<h2 class="title">Food Security</h2>
-                        <h5 class="description">Everybody eats. We all have common basic needs that commect us to the land.  It is our hope that this project will provide a vibrant forum that helps mountain people to form a better understanding of the sustainable agriculture options we have given the extremes of our seasonal weather.  strong in root to for years to come.</h5>
+<h2 class="title">Educational Programming</h2>
+                        <h5 class="description">The Nederland Greenhouse project site on East Street is ideally located in a highly visible and accessible location for community members' participation.  Our approach to  developing the structure and its agricultural potential is hands on, methodical, and participatory. We have had several meetups where food is served to volunteers, and new friendships were created.</h5>
                     </div>
                 </div>
                 <div class="separator separator-primary"></div>
@@ -19,10 +19,16 @@ description:  |
                         <div class="col-md-6">
                             <div class="image-container image-left" style="background-image: url('/img/login.jpg')">
                                 <!-- First image on the left side -->
-                                <p class="blockquote blockquote-primary">lorem ipsum lorem ipsum lorem ipsum dolor amet lorem ipsum lorem ipsum lorem ipsum dolor amet lorem ipsum lorem ipsum lorem ipsum dolor amet lorem ipsum lorem ipsum lorem ipsum dolor amet lorem ipsum lorem ipsum lorem ipsum dolor amet lorem ipsum lorem ipsum lorem ipsum dolor amet lorem ipsum lorem ipsum lorem ipsum dolor amet lorem ipsum lorem ipsum lorem ipsum dolor amet lorem ipsum lorem ipsum lorem ipsum dolor amet.
+                                <p class="blockquote blockquote-primary">1. Dig foundation 4 feed deep. Our dimentions are 17'4" by 10'4" and a 16" thick wall.
                                     <br>
                                     <br>
-                                    <small>-Local Food Movement</small>
+			2. Fill with pea gravel to 1 foot below soil level.
+                                    <br>
+                                    <br>
+                        3. Tamp with electric tamp or by hand to level
+                                    <BR><Br>
+                        4. Stack large rubble pieces in a flat layer with mortar between pieces. Stak with another layer with pieces that intersect at midpoint of the firest layer pieces.
+			    <small></small>
                                 </p>
                             </div>
                             <!-- Second image on the left side of the article -->
