--- a/content/volunteer.html
+++ b/content/volunteer.html
@@ -1,7 +1,7 @@
 ---
 class: "profile-page"
 background: "/img/bg6.jpg"
-tint: "orange"
+tint: "blue"
 description: |
             <div class="container">
                 <div class="content-center">
@@ -37,8 +37,8 @@ description: |
                         <i class="fa fa-instagram"></i>
                     </a>
                 </div>
-                <h3 class="title">About me</h3>
-                <h5 class="description">An artist of considerable range, Ryan — the name taken by Melbourne-raised, Brooklyn-based Nick Murphy — writes, performs and records all of his own music, giving it a warm, intimate feel with a solid groove structure. An artist of considerable range.</h5>
+                <h3 class="title">About the Nederland Greenhouse Project</h3>
+                <h5 class="description">We believe that by demonstrating best practices in high altitude sustainable agriculture.</h5>
                 <div class="row">
                     <div class="col-md-6 ml-auto mr-auto">
                         <h4 class="title text-center">My Portfolio</h4>
@@ -56,7 +56,7 @@ description: |
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" data-toggle="tab" href="#messages" role="tablist">
-                                        <i class="now-ui-icons sport_user-run"></i>
+                                        <i class="now-ui-icons globe_world"></i>
                                     </a>
                                 </li>
                             </ul>
@@ -111,7 +111,7 @@ description: |
         <div class="section section-contact-us text-center">
             <div class="container">
                 <h2 class="title">Want to work with us?</h2>
-                <p class="description">Your project is very important to us.</p>
+                <p class="description">Stay in the loop- Join our mailing list..</p>
                 <div class="row">
                     <div class="col-lg-6 text-center col-md-8 ml-auto mr-auto">
                         <div class="input-group input-lg">
