--- a/content/team.html
+++ b/content/team.html
@@ -1,62 +1,59 @@
 ---
-class: "profile-page"
-background: "/img/bg6.jpg"
-tint: "blue"
+class: "landing-page"
+background: "/img/pics/corwin_marking_off_site.jpg"
 description: |
-            <div class="container">
-                <div class="content-center">
-                    <div class="photo-container">
-                    </div>
-                    <h3 class="title">We are Volunteer Driven</h3>
-                    <p class="category">for maximum community impact</p>
-                    <div class="content">
-                        <div class="social-description">
-                            <h2>4</h2>
-                            <p>Work Days</p>
+           
+---
+      <div class="section section-team text-center">
+            <div class="container">  
+                <h5 class="description">Nederand Greenhouse is dedicated to demonstrating best practices in high altitude sustainable agriculture.</h5>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="team-player">
+                                <img src="/img/pics/elizabeth.jpg" alt="Elizabeth Agee Designer" class="rounded-circle img-fluid img-raised">
+                                <h4 class="title">Elizabeth Agee</h4>
+                                <p class="category text-primary">Designer</p>
+                                <p class="description">Elizabeth has worked to develop the overall greenhouse design and the proposal to the town of Nederland.
+                                    <a href="#">links</a> Elizabeth is available for design consulting and support for related projects in the Boulder and Paonia regions of Colorado.</p>
+                                <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i class="fa fa-twitter"></i></a>
+                                <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i class="fa fa-instagram"></i></a>
+                                <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i class="fa fa-facebook-square"></i></a>
+                            </div>
                         </div>
-                        <div class="social-description">
-                            <h2>26</h2>
-                            <p>Participants</p>
-                        </div>
-                        <div class="social-description">
-                            <h2>10%</h2>
-                            <p>% complete estimate</p>
+                        <div class="col-md-6">
+                            <div class="team-player">
+                                <img src="/img/pics/corwin.jpg" alt="Corwin " class="rounded-circle img-fluid img-raised">
+                                <h4 class="title">Corwin</h4>
+                                <p class="category text-primary">Natural Buider</p>
+                                <p class="description">Corwin is an eco building professional and designer.
+                                    <a href="#">links</a> for people to be able to follow them outside the site.</p>
+                                <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i class="fa fa-twitter"></i></a>
+                                <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i class="fa fa-linkedin"></i></a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
----
+        </div>
 
-
-<div class="button-container">
-                    <a href="#button" class="btn btn-primary btn-round btn-lg">Follow</a>
-                    <a href="#button" class="btn btn-default btn-round btn-lg btn-icon" rel="tooltip" title="Follow me on Twitter">
-                        <i class="fa fa-twitter"></i>
-                    </a>
-                    <a href="#button" class="btn btn-default btn-round btn-lg btn-icon" rel="tooltip" title="Follow me on Instagram">
-                        <i class="fa fa-instagram"></i>
-                    </a>
-                </div>
-                <h3 class="title">About the Nederland Greenhouse Project</h3>
-                <h5 class="description">We believe that by demonstrating best practices in high altitude sustainable agriculture.</h5>
                 <div class="row">
                     <div class="col-md-6 ml-auto mr-auto">
-                        <h4 class="title text-center">My Portfolio</h4>
+                        <h4 class="title text-center">Project Photos</h4>
                         <div class="nav-align-center">
                             <ul class="nav nav-pills nav-pills-primary" role="tablist">
+                                <li class="nav-item">
+                                    <a class="nav-link active" data-toggle="tab" href="#home" role="tablist">
+                                        <i class="now-ui-icons design_image"></i>
+                                    </a>
+                                </li>
                                 <li class="nav-item">
                                     <a class="nav-link" data-toggle="tab" href="#profile" role="tablist">
                                         <i class="now-ui-icons design_image"></i>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" data-toggle="tab" href="#home" role="tablist">
-                                        <i class="now-ui-icons location_world"></i>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
                                     <a class="nav-link" data-toggle="tab" href="#messages" role="tablist">
-                                        <i class="now-ui-icons globe_world"></i>
+                                        <i class="now-ui-icons design_image"></i>
                                     </a>
                                 </li>
                             </ul>
@@ -68,11 +65,15 @@ description: |
                         <div class="tab-pane active" id="home" role="tabpanel">
                             <div class="col-md-10 ml-auto mr-auto">
                                 <div class="row collections">
-                                    <div class="col-md-6">
+                                    <div class="col-md-4">
                                         <img src="/img/bg1.jpg" alt="" class="img-raised">
                                         <img src="/img/bg3.jpg" alt="" class="img-raised">
                                     </div>
-                                    <div class="col-md-6">
+                                    <div class="col-md-4">
+                                        <img src="/img/bg8.jpg" alt="" class="img-raised">
+                                        <img src="/img/bg7.jpg" alt="" class="img-raised">
+                                    </div>
+                                    <div class="col-md-4">
                                         <img src="/img/bg8.jpg" alt="" class="img-raised">
                                         <img src="/img/bg7.jpg" alt="" class="img-raised">
                                     </div>
@@ -83,7 +84,7 @@ description: |
                             <div class="col-md-10 ml-auto mr-auto">
                                 <div class="row collections">
                                     <div class="col-md-6">
-                                        <img src="/img/bg6.jpg" class="img-raised">
+                                        <img src="/img/bg6.jpg" alt="" class="img-raised">
                                         <img src="/img/bg11.jpg" alt="" class="img-raised">
                                     </div>
                                     <div class="col-md-6">
@@ -102,7 +103,7 @@ description: |
                                     </div>
                                     <div class="col-md-6">
                                         <img src="/img/bg7.jpg" alt="" class="img-raised">
-                                        <img src="/img/bg6.jpg" class="img-raised">
+                                        <img src="/img/bg6.jpg" alt="" class="img-raised">
                                     </div>
                                 </div>
                             </div>
@@ -135,5 +136,3 @@ description: |
                     </div>
                     </div>
                     </div>
-                    </div>
-                    
