--- a/content/resources.html
+++ b/content/resources.html
@@ -14,6 +14,45 @@ description:  |
                 <div class="section-story-overview">
                     <div class="row">
                         <div class="col-md-6">
+                          
+                          High Altitude Vegetable Varietals (Annuals)
+
+	~Lettuces						~Patty Pan Squash
+	~Claytonia (Miner’s Lettuce)				~Orach Mountain Spinach
+	~Italian Mountain Basil				~Zucchini
+	~Kinko 6” Chanteray Carrot				~Mizuna
+	~Opitko Chinese Cabbage				~All Brassicas
+	~Spaghetti Squash					~Garlic
+~Northern Bush Pumpkin				~Red Marble Onion
+	~Candy Mountain Sweet Corn			~Potatoes
+	~Kales, especially Red Russian			~Rhubarb
+	~Beets							~Siberian and Russian tomatoes
+	~Mache (super cold hardy)				~Chard
+	~Radish						~Parsnips
+
+High Altitude Perennial Food Crops
+
+	~Elderberry						~Sea Kale
+	~Goji Berry						~Sea Buckthorn
+	~Sorrel						~Garlic Chives
+	~Asparagus						~Bergamot
+	~Rhubarb						~Perennial Fennel
+	~Nanking Cherry					~Rosemary (when kept in pot)
+	~Sweet Sixteen Apple				~Strawberries
+	~Raspberries						~Gooseberries
+	~American Plum					~Chokecherry
+
+High Country Pollinator Flowers 
+
+	~Harebells						~Penstemon (Blue Mist, Rocky Mtn)
+	~Common Yarrow					~Pasque Flower
+	~Scarlet Gallardia					~Jacob’s Ladder
+	~Richardson’s Geranium				~Black-eyed Susan
+	~Rocky Mtn Bee Plant				~Silky Phacelia
+	~Bee Balm						~Golden Banner
+	~Silvery Lupine					~Blue Flax
+	~Prairie Smoke					~Blanketflower
+                          
                             <h2>Garden Desiogn</h2>
                             <ul>
                                 <li>Grow Charts</li>
