--- a/content/events.html
+++ b/content/events.html
@@ -41,10 +41,20 @@ description:  |
                             <div class="image-container image-right" style="background-image: url('/img/pics/greenhouse_cad1_elizabeth_agee_240.jpg')"></div>
                             </p>
                             <p>
-                              <h2>Educational Community Greenhouse Build Process</h2>
-                              <span>The process of building this greenhouse is being done weekly on saturdays with volunteers from the mountain community. The steps are being shared here online and participants are encouraged to come ready to work, with warm clothes, an open mind, and willingness to meet new friends.</span> 
+                              <h2>Community Greenhouse Build Process</h2>
+                              <span>During the buid process, The process of building this greenhouse is being done weekly on saturdays with volunteers from the mountain community. The steps are being shared here online and participants are encouraged to come ready to work, with warm clothes, an open mind, and willingness to meet new friends.</span> 
                             </p>
-                            <p>
+                            <p>May 4: Planning your alpine garden with Permaculture principles at the library with Elizabeth Agee
+</p><p>
+May 5: Planning your garden for micro enterprise and community sharing with Elizabeth Agee
+</p><p>
+June 1: Setting up off grid heating systems for a year round greenhouse with Greg Willson
+</p><p>
+July 6: Timber frame construction with local materials with Corwin Mandel
+</p><p>
+August 3: Hempcrete building techniques with Elizabeth Agee and Corwin Mandel
+</p><p>
+September 7: Preserving the Harvest canning, fermenting, proper storage of squash and roots with Elizabeth Agee
                             </p>
                         </div>
                     </div>
