--- a/content/resources.html
+++ b/content/resources.html
@@ -3,8 +3,8 @@ class: "landing-page"
 background: "/img/pics/team_haul.jpg"
 tint: "yellow"
 title: "Resources"
-description:  |
-              <a href="https://facebook.com/nederland-sustainability-discussion" class="btn btn-primary btn-icon btn-round"><i class="fa fa-facebook-square"></i></a>
+description: " High Elevation Permaculture Resources"
+              
 ---
 
 <h2 class="title">Resource Page</h2>
