--- a/content/resources.html
+++ b/content/resources.html
@@ -15,7 +15,7 @@ description: " High Elevation Permaculture Resources"
                     <div class="row">
                         <div class="col-md-6">
                           
-                          High Altitude Vegetable Varietals (Annuals)
+                          <h2>High Altitude Vegetable Varietals (Annuals)</h2>
 
 	~Lettuces						~Patty Pan Squash
 	~Claytonia (Miner’s Lettuce)				~Orach Mountain Spinach
@@ -30,7 +30,7 @@ description: " High Elevation Permaculture Resources"
 	~Mache (super cold hardy)				~Chard
 	~Radish						~Parsnips
 
-High Altitude Perennial Food Crops
+<h2>High Altitude Perennial Food Crops</h2>
 
 	~Elderberry						~Sea Kale
 	~Goji Berry						~Sea Buckthorn
@@ -42,7 +42,7 @@ High Altitude Perennial Food Crops
 	~Raspberries						~Gooseberries
 	~American Plum					~Chokecherry
 
-High Country Pollinator Flowers 
+<h2>High Country Pollinator Flowers</h2>
 
 	~Harebells						~Penstemon (Blue Mist, Rocky Mtn)
 	~Common Yarrow					~Pasque Flower
@@ -53,7 +53,7 @@ High Country Pollinator Flowers
 	~Silvery Lupine					~Blue Flax
 	~Prairie Smoke					~Blanketflower
                           
-                            <h2>Garden Desiogn</h2>
+                      <h2>Garden Design</h2>
                             <ul>
                                 <li>Grow Charts</li>
                                 <li>Companion Planting</li>
