--- a/content/team.html
+++ b/content/team.html
@@ -13,7 +13,10 @@ description: |
                                 <img src="/img/pics/elizabeth.jpg" alt="Elizabeth Agee Designer" class="rounded-circle img-fluid img-raised">
                                 <h4 class="title">Elizabeth Agee</h4>
                                 <p class="category text-primary">Designer</p>
-                                <p class="description">Elizabeth is an edible landscape and Permaculture systems designer. She specializes in providing design and maintenance consulting for small scale food producing yards and farms. 
+                                <p class="description">Available for consultations on the Front Range and design and install on Western slope with a permalink to my email backyardfarmsteaddesign@gmail.com
+                                           
+                                        
+                                           Elizabeth is an edible landscape and Permaculture systems designer. She specializes in providing design and maintenance consulting for small scale food producing yards and farms. 
 ~then what you have there.</p>
                                 </div>
                         </div>
