--- a/content/team.html
+++ b/content/team.html
@@ -13,9 +13,7 @@ description: |
                                 <img src="/img/pics/elizabeth.jpg" alt="Elizabeth Agee Designer" class="rounded-circle img-fluid img-raised">
                                 <h4 class="title">Elizabeth Agee</h4>
                                 <p class="category text-primary">Designer</p>
-                                <p class="description">Available for consultations on the Front Range and design and install on Western slope with a permalink to my email backyardfarmsteaddesign@gmail.com
-                                           
-                               .</p>
+                                <p class="description">Available for consultations on the Front Range and design and install on Western slope with a permalink to my email <a href="mailto:backyardfarmsteaddesign@gmail.com">backyardfarmsteaddesign@gmail.com</a></p>
                                 </div>
                         </div>
                                
