--- a/content/team.html
+++ b/content/team.html
@@ -119,19 +119,22 @@ description: |
                             <span class="input-group-addon">
                                 <i class="now-ui-icons users_circle-08"></i>
                             </span>
-                            <input type="text" class="form-control" placeholder="First Name...">
+                            
+                            <form action="https://formspree.io/acmeideal@gmail.com" method="POST">                                                                 
+                            <input name="name" type="text" class="form-control" placeholder="First Name...">
                         </div>
                         <div class="input-group input-lg">
                             <span class="input-group-addon">
                                 <i class="now-ui-icons ui-1_email-85"></i>
                             </span>
-                            <input type="text" class="form-control" placeholder="Email...">
+                            <input type="text" class="form-control" name="email" placeholder="Email...">
                         </div>
                         <div class="textarea-container">
                             <textarea class="form-control" name="name" rows="4" cols="80" placeholder="Type a message..."></textarea>
                         </div>
                         <div class="send-button">
-                            <a href="#pablo" class="btn btn-primary btn-round btn-block btn-lg">Send Message</a>
+                                     <input type="submit" value="Send">
+                        </form>       
                         </div>
                     </div>
                     </div>
