--- a/content/events.html
+++ b/content/events.html
@@ -44,17 +44,17 @@ description:  |
                               <h2>Community Greenhouse Build Process</h2>
                               <span>During the buid process, The process of building this greenhouse is being done weekly on saturdays with volunteers from the mountain community. The steps are being shared here online and participants are encouraged to come ready to work, with warm clothes, an open mind, and willingness to meet new friends.</span> 
                             </p>
-                            <p>May 4p: Planning your alpine garden with Permaculture principles at the library with Elizabeth Agee 2-3:30</p>
+                            <p>May 4: Planning your alpine garden with Permaculture principles at the library with Elizabeth Agee 2-3:30</p>
 
-<p>May 5: Planning your garden for micro enterprise and community sharing with Elizabeth Agee 2-3:30</p>
+                            <p>May 5: Planning your garden for micro enterprise and community sharing with Elizabeth Agee 2-3:30</p>
 
-<p>June 1: Timber frame construction with local materials with Corwin Mandel Guerico Field 11-1</p>
+                            <p>June 1: Timber frame construction with local materials with Corwin Mandel Guerico Field 11-1</p>
 
-<p>June 15: Setting up off grid heating systems for a year round greenhouse with Greg Willson Guerico Field 11-1</p>
+                            <p>June 15: Setting up off grid heating systems for a year round greenhouse with Greg Willson Guerico Field 11-1</p>
 
-<p>July 1: Hempcrete building techniques with Elizabeth Agee and Corwin Mandel Guerico Field 11-1</p>
+                            <p>July 1: Hempcrete building techniques with Elizabeth Agee and Corwin Mandel Guerico Field 11-1</p>
 
-<p>September 7: Preserving the Harvest canning, fermenting, proper storage of squash and roots with Elizabeth Agee Library 2--3:30</p>
+                            <p>September 7: Preserving the Harvest canning, fermenting, proper storage of squash and roots with Elizabeth Agee Library 2--3:30</p>
                                         
                         </div>
                     </div>
