--- a/content/team.html
+++ b/content/team.html
@@ -13,7 +13,7 @@ description: |
                                 <img src="/img/pics/elizabeth.jpg" alt="Elizabeth Agee Designer" class="rounded-circle img-fluid img-raised">
                                 <h4 class="title">Elizabeth Agee</h4>
                                 <p class="category text-primary">Designer</p>
-                                <p class="description">Available for consultations on the Front Range and design and install on Western slope with a permalink to my email <a href="mailto:backyardfarmsteaddesign@gmail.com">backyardfarmsteaddesign@gmail.com</a></p>
+                                <p class="description">Elizabeth is passionate about bringing people back into relationship with nature through design and education in one's own garden. She received her Permaculture Design Certificate from Central Rocky Mountain Permaculture Institute in Basalt, Seed Education at Rocky Mountain Seed School and Xeric Design through a working internship at Matrix Gardens in Boulder, Colorado. She offers design and consultation, DIY plans and installation services to the Western Slope and Roaring Fork Valley through her company, Backyard Farmstead. She also offers regenerative gardening workshops to Colorado communities. Email: <a href="mailto:backyardfarmsteaddesign@gmail.com">backyardfarmsteaddesign@gmail.com</a></p>
                                 </div>
                         </div>
                                
