--- a/content/team.html
+++ b/content/team.html
@@ -25,10 +25,8 @@ description: |
                                 <img src="/img/pics/corwin.jpg" alt="Corwin " class="rounded-circle img-fluid img-raised">
                                 <h4 class="title">Corwin</h4>
                                 <p class="category text-primary">Natural Buider</p>
-                                <p class="description">Corwin is an eco building professional and designer.
-                                    <a href="#">links</a> for people to be able to follow them outside the site.</p>
-                                <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i class="fa fa-twitter"></i></a>
-                                <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i class="fa fa-linkedin"></i></a>
+                                <p class="description">Corwin Mandel has a Bacholar’s degree in Ecological Architecture from Prescott College. He has built many structures throughout Oregon, California, New Mexico and Colorado. His website is healingearthhomes.com.  His mission is to change the conventional way of construction and make the process organic, alive, and fun, encouraging owner and community participation. He believes in creating biological structures that speak to our original instincts and relate to the environment and land around them. Works of art that cradle us, flow with the curves of our bodies and remind us where we came from, the earth, the womb, the stars.
+                                  
                             </div>
                         </div>
                     </div>
